create usersetting page

--- a/front/src/styles/App.css
+++ b/front/src/styles/App.css
@@ -3,5 +3,5 @@
 @tailwind utilities;
 
 .setting {
-  background-image: '../images/background.png';
+  background-image: "../images/background.png";
 }
